--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Net-Proxy
-version: 0.02
+version: 0.03
 author:
   - "Philippe 'BooK' Bruhat, C<< <book@cpan.org> >>."
 abstract: Framework for proxying network connections in many ways
@@ -15,11 +15,13 @@ recommends:
 provides:
   Net::Proxy:
     file: lib/Net/Proxy.pm
-    version: 0.02
+    version: 0.03
   Net::Proxy::Connector:
     file: lib/Net/Proxy/Connector.pm
   Net::Proxy::Connector::connect:
     file: lib/Net/Proxy/Connector/connect.pm
+  Net::Proxy::Connector::dual:
+    file: lib/Net/Proxy/Connector/dual.pm
   Net::Proxy::Connector::dummy:
     file: lib/Net/Proxy/Connector/dummy.pm
   Net::Proxy::Connector::tcp:
