--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,8 @@
----
+--- #YAML:1.0
 name: Net-Proxy
-version: 0.04
+version: 0.05
 author:
-  - "Philippe 'BooK' Bruhat, C<< <book@cpan.org> >>."
+  - Philippe 'BooK' Bruhat, C<< <book@cpan.org> >>.
 abstract: Framework for proxying network connections in many ways
 license: perl
-requires:
-  IO::Select: 0
-  IO::Socket: 0
-  Scalar::Util: 0
-  perl: 5.6
-recommends:
-  LWP::UserAgent: 2
-provides:
-  Net::Proxy:
-    file: lib/Net/Proxy.pm
-    version: 0.04
-  Net::Proxy::Connector:
-    file: lib/Net/Proxy/Connector.pm
-  Net::Proxy::Connector::connect:
-    file: lib/Net/Proxy/Connector/connect.pm
-  Net::Proxy::Connector::dual:
-    file: lib/Net/Proxy/Connector/dual.pm
-  Net::Proxy::Connector::dummy:
-    file: lib/Net/Proxy/Connector/dummy.pm
-  Net::Proxy::Connector::tcp:
-    file: lib/Net/Proxy/Connector/tcp.pm
-generated_by: Module::Build version 0.26
+generated_by: Module::Build version 0.2612, without YAML.pm
