Import of BOOK/Net-Proxy-0.09 from CPAN.
gitpan-cpan-distribution: Net-Proxy
gitpan-cpan-version:      0.09
gitpan-cpan-path:         BOOK/Net-Proxy-0.09.tar.gz
gitpan-cpan-author:       BOOK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Net-Proxy
-version: 0.08
+version: 0.09
 author:
   - "Philippe 'BooK' Bruhat, C<< <book@cpan.org> >>."
 abstract: Framework for proxying network connections in many ways
@@ -12,10 +12,14 @@ requires:
   perl: 5.6
 recommends:
   LWP::UserAgent: 2
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
 provides:
   Net::Proxy:
     file: lib/Net/Proxy.pm
-    version: 0.08
+    version: 0.09
   Net::Proxy::Connector:
     file: lib/Net/Proxy/Connector.pm
   Net::Proxy::Connector::connect:
@@ -30,4 +34,5 @@ provides:
     file: lib/Net/Proxy/Connector/ssl.pm
   Net::Proxy::Connector::tcp:
     file: lib/Net/Proxy/Connector/tcp.pm
-generated_by: Module::Build version 0.26
+resources:
+  license: http://dev.perl.org/licenses/
