--- a/META.yml
+++ b/META.yml
@@ -1,39 +1,38 @@
 ---
-name: Net-Proxy
-version: 0.12
+abstract: 'Framework for proxying network connections in many ways'
 author:
-  - "Philippe 'BooK' Bruhat, C<< <book@cpan.org> >>."
-abstract: Framework for proxying network connections in many ways
+  - 'Philippe Bruhat (BooK) <book@cpan.org>'
+build_requires:
+  File::Find: '0'
+  File::Spec: '0'
+  File::Spec::Functions: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  Test::Builder: '0'
+  Test::More: '0.88'
+  perl: '5.006'
+configure_requires:
+  ExtUtils::MakeMaker: '6.30'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.016, CPAN::Meta::Converter version 2.133380'
 license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  IO::Select: 0
-  IO::Socket: 0
-  Scalar::Util: 0
-  perl: 5.6
-recommends:
-  IO::Socket::SSL: 1
-  LWP::UserAgent: 2
-provides:
-  Net::Proxy:
-    file: lib/Net/Proxy.pm
-    version: 0.12
-  Net::Proxy::Connector:
-    file: lib/Net/Proxy/Connector.pm
-  Net::Proxy::Connector::connect:
-    file: lib/Net/Proxy/Connector/connect.pm
-  Net::Proxy::Connector::connect_ssl:
-    file: lib/Net/Proxy/Connector/connect_ssl.pm
-  Net::Proxy::Connector::dual:
-    file: lib/Net/Proxy/Connector/dual.pm
-  Net::Proxy::Connector::dummy:
-    file: lib/Net/Proxy/Connector/dummy.pm
-  Net::Proxy::Connector::ssl:
-    file: lib/Net/Proxy/Connector/ssl.pm
-  Net::Proxy::Connector::tcp:
-    file: lib/Net/Proxy/Connector/tcp.pm
-generated_by: Module::Build version 0.2808
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: Net-Proxy
+requires:
+  Carp: '0'
+  Getopt::Long: '0'
+  IO::Select: '0'
+  IO::Socket::INET: '0'
+  IO::Socket::SSL: '0'
+  LWP::UserAgent: '0'
+  POSIX: '0'
+  Pod::Usage: '0'
+  Scalar::Util: '0'
+  strict: '0'
+  warnings: '0'
+resources:
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Net-Proxy
+  repository: http://github.com/book/Net-Proxy.git
+version: '0.13'
